# koi

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTAINERS.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  IMPLEMENTATION.md  README.md  SECURITY.md  TECHNICAL.md  build.bat  build.ps1  clippy.toml  install.ps1  install.sh  test-embedded.bat  version.json
.agentic/: CONTEXT.md  README.md
.agentic/reference/: api-endpoints.md  utilities.md
.agentic/rules/: http-adapter.md  mdns-boundary.md
.claude/: ecc-tools.json  identity.json
.claude/commands/: dependency-bump-and-verification.md  explore.md  (+3 more)
.codex/: AGENTS.md
.github/: release-template.md
crates/command-surface/: Cargo.toml
crates/command-surface/src/: glyph.rs  lib.rs  traits.rs
crates/command-surface/src/render/: default.rs  mod.rs  profile.rs
crates/command-surface/src/render/writers/: ansi.rs  mod.rs  plain.rs
crates/koi/: Cargo.toml  README.md
crates/koi-certmesh/: Cargo.toml  README.md
crates/koi-certmesh/src/: audit.rs  backup.rs  bundle.rs  ca.rs  certfiles.rs  certmesh_paths.rs  client.rs  conformance.rs  core_admin.rs  core_auth.rs  core_enroll.rs  core_identity.rs  core_lifecycle.rs  core_member.rs  core_renewal.rs  core_setup.rs  core_tests.rs  csr.rs  diagnosis.rs  enrollment.rs  entropy.rs  envelope.rs  error.rs  failover.rs  health.rs  http.rs  init_ceremony.rs  invite.rs  lib.rs  lifecycle.rs  member.rs  mtls.rs  pond_ceremony.rs  profiles.rs  protocol.rs  roster.rs  sealed.rs  serve.rs  wordlist.rs
crates/koi-certmesh/src/acme/: account.rs  challenge.rs  jws.rs  mod.rs  nonce.rs  order.rs  problem.rs  router.rs  state.rs
crates/koi-certmesh/tests/: acme.rs  trust_sim.proptest-regressions  trust_sim.rs
crates/koi-client/: Cargo.toml  README.md
crates/koi-client/src/: lib.rs
crates/koi-common/: Cargo.toml  README.md
crates/koi-common/assets/: dashboard.html  mdns-browser.html
crates/koi-common/src/: api.rs  browser.rs  capability.rs  ceremony.rs  dashboard.rs  diagnosis.rs  encoding.rs  envelope.rs  error.rs  events.rs  firewall.rs  http.rs  id.rs  integration.rs  lib.rs  mdns_protocol.rs  net.rs  paths.rs  peer.rs  persist.rs  pipeline.rs  posture.rs  runtime_state.rs  sealed.rs  test.rs  types.rs
crates/koi-common/tests/: architecture.rs
crates/koi-compose/: Cargo.toml  README.md
crates/koi-compose/src/: announce.rs  bridges.rs  certmesh.rs  cores.rs  lib.rs  orchestrator.rs  self_announce.rs  snapshot.rs  status.rs
crates/koi-config/: Cargo.toml  README.md
crates/koi-config/src/: breadcrumb.rs  dirs.rs  lib.rs  state.rs
crates/koi-crypto/: Cargo.toml  README.md
crates/koi-crypto/src/: auth.rs  key_agreement.rs  keys.rs  lib.rs  pinning.rs  secret.rs  signing.rs  totp.rs  tpm.rs  unlock_slots.rs  vault.rs
crates/koi-dashboard/: Cargo.toml  README.md
crates/koi-dashboard/assets/: dashboard.html  mdns-browser.html
crates/koi-dashboard/src/: browse_source.rs  browser.rs  dashboard.rs  forward.rs  lib.rs  meta_browse.rs  well_known.rs
crates/koi-dashboard/tests/: xss.rs
crates/koi-dns/: Cargo.toml  README.md
crates/koi-dns/src/: aliases.rs  http.rs  lib.rs  records.rs  resolver.rs  runtime.rs  safety.rs  zone.rs
crates/koi-embedded/: Cargo.toml  README.md
crates/koi-embedded/examples/: embedded-basic.rs  embedded-integration.rs
crates/koi-embedded/src/: config.rs  events.rs  handle.rs  http.rs  lib.rs  mdns_browse_adapter.rs  serve.rs  testkit.rs
crates/koi-embedded/tests/: both_postures.rs  embedded.rs  http_ephemeral.rs  udp.rs  whole_story.rs
crates/koi-health/: Cargo.toml  README.md
crates/koi-health/src/: checker.rs  http.rs  lib.rs  log.rs  machine.rs  service.rs  state.rs
crates/koi-mcp/: Cargo.toml
crates/koi-mcp/src/: client.rs  heartbeat.rs  lib.rs  server.rs  source.rs  tools.rs
crates/koi-mcp/tests/: stdio_session.rs
crates/koi-mdns/: Cargo.toml  README.md
crates/koi-mdns/src/: browse.rs  daemon.rs  error.rs  events.rs  http.rs  lib.rs  protocol.rs  registry.rs
crates/koi-proxy/: Cargo.toml  README.md
crates/koi-proxy/src/: config.rs  data_plane_tests.rs  forwarder.rs  http.rs  lib.rs  listener.rs  safety.rs  tls.rs
crates/koi-runtime/: Cargo.toml
crates/koi-runtime/src/: backend.rs  docker.rs  error.rs  heuristics.rs  http.rs  instance.rs  lib.rs
crates/koi-runtime/tests/: docker_integration.rs
crates/koi-serve/: Cargo.toml  README.md
crates/koi-serve/src/: acme.rs  dashboard.rs  dispatch.rs  http.rs  lib.rs  mcp_http.rs  mtls.rs  pipe.rs  serve.rs  stdio.rs  trust_plane.rs
crates/koi-truststore/: Cargo.toml  README.md
crates/koi-truststore/src/: darwin.rs  lib.rs  linux.rs  windows.rs
crates/koi-udp/: Cargo.toml  README.md
crates/koi-udp/src/: binding.rs  http.rs  lib.rs
crates/koi/assets/: dashboard.html
crates/koi/src/: admin.rs  cli.rs  client.rs  daemon.rs  dispatch.rs  format.rs  infra.rs  integrations.rs  main.rs  openapi.rs  orchestrator.rs  surface.rs  wiring.rs
crates/koi/src/adapters/: acme.rs  cli.rs  dashboard.rs  dispatch.rs  http.rs  mcp_http.rs  mdns_browser.rs  mod.rs  mtls.rs  pipe.rs  prometheus_sd.rs  trust_plane.rs
crates/koi/src/commands/: ceremony_cli.rs  certmesh.rs  client.rs  dns.rs  factory_reset.rs  health.rs  mcp.rs  mdns.rs  mod.rs  proxy.rs  standalone.rs  status.rs  token.rs  trust.rs  udp.rs
crates/koi/src/help/: confirm.rs  glyph.rs  meta.rs  mod.rs  profile.rs  render.rs  writers.rs
crates/koi/src/platform/: macos.rs  mod.rs  unix.rs  windows.rs
crates/koi/tests/: two_daemon_certmesh.rs
docs/: SURFACES.md  embedded-integration-guide.md  embedded-quickstart.md  guide-certmesh.md  guide-dns.md  guide-health.md  guide-mdns.md  guide-proxy.md  guide-system.md  index.md  overview.md  qa-test-plan.md
scripts/: AiDocDist.ps1  bump-version.ps1  check-doc-leaks.sh  check-lean-embedded.sh  check-publish-list.sh  cross-host-certmesh.sh  cross-platform-certmesh.ps1  lint-surfaces.sh  release.ps1
src/: admin.rs  client.rs  commands.rs  config.rs  format.rs  main.rs
tests/: concurrency.ps1  concurrency.sh  integration.ps1  integration.sh
(+194 files in other folders)
