[workspace]
resolver = "2"
members = [
    "crates/koi",
    "crates/koi-common",
    "crates/koi-mdns",
    "crates/koi-config",
    "crates/koi-certmesh",
    "crates/koi-crypto",
    "crates/koi-truststore",
    "crates/koi-dns",
    "crates/koi-health",
    "crates/koi-proxy",
]

[workspace.package]
version = "0.2.202602112311"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/sylin-org/koi"
homepage = "https://sylin.org/koi"

[workspace.dependencies]
# Internal crates
koi-common = { path = "crates/koi-common" }
koi-mdns = { path = "crates/koi-mdns" }
koi-config = { path = "crates/koi-config" }
koi-certmesh = { path = "crates/koi-certmesh" }
koi-crypto = { path = "crates/koi-crypto" }
koi-truststore = { path = "crates/koi-truststore" }

# Shared external dependencies — single version pin
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v7"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"

# Crypto dependencies (Phase 2)
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
totp-rs = { version = "5", features = ["gen_secret"] }
qrcode = { version = "0.14", default-features = false }
pem = "3"
rcgen = "0.13"
time = "0.3"
crossterm = "0.28"
indicatif = "0.17"
