[package]
name = "command-surface"
description = "Glyph-based command rendering and semantic metadata for the Koi CLI"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
render = ["dep:console", "dep:is-terminal", "dep:supports-color", "dep:terminal_size"]

[dependencies]
console = { workspace = true, optional = true }
is-terminal = { workspace = true, optional = true }
supports-color = { workspace = true, optional = true }
terminal_size = { workspace = true, optional = true }
