[package]
name = "koi-certmesh"
description = "Zero-config private CA, certificate enrollment, and mesh trust for the local network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
koi-common.workspace = true
koi-crypto.workspace = true
utoipa.workspace = true
koi-truststore.workspace = true
rcgen.workspace = true
time.workspace = true
pem.workspace = true
sha2.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
axum.workspace = true
crossterm.workspace = true
indicatif.workspace = true
rand.workspace = true
hostname.workspace = true
ipnet.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
