[package]
name = "koi-certmesh"
description = "Zero-config private CA, certificate enrollment, and mesh trust for the local network"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["certificate", "pki", "tls", "mesh", "enrollment"]
categories = ["cryptography", "network-programming"]

[dependencies]
koi-common.workspace = true
# koi-crypto's optional backends (keyring credential store, qr rendering) are opt-in;
# this crate re-exposes them default-on (see [features]) so it builds identically
# standalone, and forwards the choice from its consumers.
koi-crypto = { workspace = true, default-features = false }
utoipa.workspace = true
koi-truststore.workspace = true
rcgen.workspace = true
time.workspace = true
pem.workspace = true
sha2.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
axum.workspace = true
crossterm.workspace = true
indicatif.workspace = true
rand.workspace = true
hostname.workspace = true

[features]
# Pass-through to koi-crypto's optional backends, default-on (standalone builds and the
# binary are unchanged). A lean consumer disables them via `default-features = false`.
default = ["keyring", "qr"]
keyring = ["koi-crypto/keyring"]
qr = ["koi-crypto/qr"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
