[package]
name = "koi-certmesh"
description = "Zero-config private CA, certificate enrollment, and mesh trust for the local network"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["certificate", "pki", "tls", "mesh", "enrollment"]
categories = ["cryptography", "network-programming"]

[dependencies]
koi-common.workspace = true
# koi-crypto's optional backends (keyring credential store, qr rendering) are opt-in;
# this crate re-exposes them default-on (see [features]) so it builds identically
# standalone, and forwards the choice from its consumers.
koi-crypto = { workspace = true, default-features = false }
async-trait.workspace = true
utoipa.workspace = true
koi-truststore.workspace = true
# `pem` + `x509-parser` enable `CertificateSigningRequestParams::from_pem`, which
# parses AND verifies a client CSR's self-signature (used by the ACME finalize path).
rcgen = { workspace = true, features = ["pem", "x509-parser"] }
time.workspace = true
pem.workspace = true
sha2.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
axum.workspace = true
crossterm.workspace = true
indicatif.workspace = true
rand.workspace = true
hostname.workspace = true
# ACME (RFC 8555) JWS verification is ASSEMBLED from primitives — no josekit/jsonwebtoken.
# `p256` reconstructs the account's ES256 verifying key from the JWK and verifies the raw
# 64-byte R‖S signature; `base64` decodes the URL_SAFE_NO_PAD JWS members; `hmac`+`subtle`
# do the const-time EAB MAC check for closed-mode enrollment.
p256.workspace = true
base64.workspace = true
hmac.workspace = true
subtle.workspace = true
# Parse the ACME finalize CSR to enforce that every requested SAN is an
# authorized order identifier before the CA signs anything.
x509-parser.workspace = true

[features]
# Pass-through to koi-crypto's optional backends, default-on (standalone builds and the
# binary are unchanged). A lean consumer disables them via `default-features = false`.
default = ["keyring", "qr"]
keyring = ["koi-crypto/keyring"]
qr = ["koi-crypto/qr"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
# ACME conformance: drive the in-process ACME router with a real RFC 8555 client.
# `builder_with_root` (hyper-rustls) pins the test CA root and speaks HTTPS, so the
# conformance test also stands up a rustls TLS server with the daemon leaf. `rcgen`
# lets instant-acme auto-generate the order's key + CSR at finalize.
instant-acme = { version = "0.8.5", features = ["hyper-rustls", "rcgen"] }
tokio-rustls.workspace = true
rustls.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tempfile = "3"
# Raw-JWS security tests POST flattened JWS over plain HTTP (no TLS); reqwest is
# the simplest async client. The conformance test reuses it for nothing — it goes
# through instant-acme over TLS.
reqwest = { workspace = true }
# Build JWS requests + verify the issued chain in tests.
p256 = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rcgen = { workspace = true, features = ["pem", "x509-parser"] }
