[package]
name = "koi-client"
description = "HTTP client for the Koi daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["koi", "client", "http", "daemon", "api"]
categories = ["network-programming", "api-bindings"]

[dependencies]
# Wire-contract types live in the kernel, so the blocking HTTP client no longer pulls
# the mDNS engine (mdns-sd) or the async health crate — just the types + breadcrumb.
koi-common.workspace = true
koi-config.workspace = true
hickory-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq = { version = "2", features = ["json"] }
