[package]
name = "koi-common"
description = "Shared types, traits, and utilities for the Koi local network toolkit"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["koi", "networking", "types", "pipeline", "service-discovery"]
categories = ["network-programming"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
axum.workspace = true
utoipa.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
async-stream.workspace = true
chrono.workspace = true
hostname.workspace = true
