[package]
name = "koi-common"
description = "Shared types, traits, and utilities for the Koi local network toolkit"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["koi", "networking", "types", "pipeline", "service-discovery"]
categories = ["network-programming"]

# Types-only kernel. axum (wire error responses), utoipa (OpenAPI schemas), and chrono
# (integration timestamps) have legitimate kernel uses; the presentation deps that the
# dashboard/browser dragged in (tokio, tokio-stream, tokio-util, async-stream, hostname)
# left with koi-dashboard in P06.
[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
axum.workspace = true
utoipa.workspace = true
chrono.workspace = true
