[package]
name = "koi-config"
description = "Configuration, breadcrumb discovery, and state persistence for Koi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
koi-common.workspace = true
tracing.workspace = true
serde.workspace = true
toml = "0.8"
