[package]
name = "koi-crypto"
description = "Key management, TOTP, signing, and encryption primitives for local network trust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
koi-common.workspace = true
base64.workspace = true
image.workspace = true
utoipa.workspace = true
p256.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
sha2.workspace = true
rand.workspace = true
zeroize.workspace = true
subtle.workspace = true
totp-rs.workspace = true
qrcode.workspace = true
pem.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
keyring.workspace = true
x25519-dalek.workspace = true
hkdf.workspace = true
hostname.workspace = true

[features]
default = []
# Gate FIDO2 unlock slot behind a feature flag. The current implementation
# derives the storage key from credential_id which is not secret — this is
# a software gate only. Enable when the authenticator integration is hardened.
fido2-unlock = []
