[package]
name = "koi-dashboard"
description = "Presentation layer for Koi: dashboard + mDNS network browser (HTML, SSE, snapshot)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["koi", "dashboard", "mdns", "sse", "networking"]
categories = ["network-programming", "web-programming"]

[dependencies]
# Kernel (types only)
koi-common.workspace = true
# Event-bearing domains: the unified forwarder maps their concrete events, and the
# browse adapter wraps MdnsCore. A composition crate, not a domain crate — nothing
# depends on it, so the kernel and domain closures stay clean.
koi-mdns.workspace = true
koi-certmesh.workspace = true
koi-dns.workspace = true
koi-health.workspace = true
koi-proxy.workspace = true
koi-runtime.workspace = true

axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
async-stream.workspace = true
chrono.workspace = true
hostname.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["test-util"] }
