[package]
name = "koi-dns"
description = "Local DNS resolver with mDNS, certmesh, and static record integration"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["dns", "resolver", "local-network", "mdns", "service-discovery"]
categories = ["network-programming"]

[dependencies]
koi-common.workspace = true
koi-config.workspace = true
utoipa.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
axum.workspace = true
hickory-server.workspace = true
hickory-resolver.workspace = true
hickory-proto.workspace = true
