[package]
name = "koi-embedded"
description = "Embed local network discovery, DNS, health, and TLS directly in your Rust application"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
koi-common.workspace = true
koi-crypto.workspace = true
koi-mdns.workspace = true
koi-dns.workspace = true
koi-health.workspace = true
koi-certmesh.workspace = true
koi-proxy.workspace = true
koi-udp.workspace = true
koi-config.workspace = true
koi-client.workspace = true
hickory-proto.workspace = true

tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
axum.workspace = true
tower-http = { workspace = true, features = ["cors"] }
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
futures-util.workspace = true

[dev-dependencies]
base64.workspace = true

