[package]
name = "koi-health"
description = "Machine and service health monitoring for the local network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
koi-common.workspace = true
koi-certmesh.workspace = true
koi-dns.workspace = true
koi-mdns.workspace = true
koi-proxy.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest.workspace = true
hickory-proto.workspace = true
axum.workspace = true
tracing.workspace = true
