[package]
name = "koi-health"
description = "Machine and service health monitoring for the local network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
koi-common.workspace = true
utoipa.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest.workspace = true
axum.workspace = true
tracing.workspace = true
