[package]
name = "koi-health"
description = "Machine and service health monitoring for the local network"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["health-check", "monitoring", "http", "tcp", "service-health"]
categories = ["network-programming"]

[dependencies]
koi-common.workspace = true
utoipa.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest.workspace = true
axum.workspace = true
tracing.workspace = true
