[package]
name = "koi-mdns"
description = "mDNS/DNS-SD service discovery and registration for the local network"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["mdns", "dns-sd", "service-discovery", "zeroconf", "bonjour"]
categories = ["network-programming"]

[dependencies]
koi-common.workspace = true
utoipa.workspace = true
mdns-sd = "0.17"
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio-util.workspace = true
hostname = "0.4"
if-addrs.workspace = true
